# frave

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rects.txt  utils.rs
.github/workflows/: rust.yml
cargos/frif-bench/: Cargo.toml
cargos/frif-cli/: Cargo.toml
cargos/libfrif/: Cargo.toml
crates/fri-bench/: Cargo.toml
crates/fri-bench/src/: benchmark.rs
crates/fri-cli/: Cargo.toml
crates/fri-cli/src/: main.rs
crates/fri-cli/src/commands/: bench.rs  decode.rs  encode.rs  mod.rs  optimize.rs  plots.rs
crates/libfri/: Cargo.toml
crates/libfri/src/: context_modeling.rs  decoder.rs  encoder.rs  fractal.rs  images.rs  lib.rs  stage.rs  utils.rs
crates/libfri/src/stages/: channel_transform.rs  entropy_coding.rs  mod.rs  prediction.rs  quantization.rs  serialize.rs  wavelet_transform.rs
src/: cli.rs  cli.yaml  commands.rs  coord.rs  decoder.rs  encoder.rs  frave.rs  frave_image.rs  lib.rs  main.rs  utils.rs  variants.rs
src/compression/: ans.rs  decoder.rs  encoder.rs  mod.rs
src/fractal/: image.rs  mod.rs  variants.rs
src/utils/: \  ans.rs  bitwise.rs  mod.rs  trimmer.rs
