[package]
name = "frave"
version = "0.1.0"
about = "Image compression program based on complex based numeral systems"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
bmp = "0.5.0"
constriction = "0.2.6"
